# ma1-ml-proj2

./: .856 f1.pth  .gitignore  README.md  UNet_145.pth  antoine_test.ipynb  augmentation.py  caca.csv  caca_3.csv  checkpoint_165.pth  checkpoint_200.pth  checkpoint_5.pth  checkpoint_antoine_testipynb.855.pth  edgedetect.py  environment.yml  fcn.ipynb  infos.md  main.ipynb  mask_to_submission.py  predict.py  pyproject.toml  segment_aerial_images.ipynb  submission_antoine.csv  utils.py
checkpoints/: .856 f1.pth  README.md  checkpoint_165.pth  checkpoint_200.pth  checkpoint_5.pth  checkpoint_antoine_testipynb.855.pth  dinknet.pt  unet-marwan2.pt
checkpoints/temp/: README.md
data/: README.md
models/: UNet.py
new/: Copie_de_antoine_test.ipynb  checkpoint_120.pth  checkpoint_160.pth
src/road_segmentation/: augmentation.py  mask_to_submission.py  submission_to_mask.py
src/road_segmentation/models/: __init__.py  dinknet.py  fcn.py  homemadefcn.py  refined_unet.py  segnet.py  unet.py
src/road_segmentation/utils/: __init__.py  augmentation.py  image.py  loss.py  metrics.py  submission.py  visualization.py
submissions/: README.md  dinknet.csv  submission_0.984.csv  submission_1701368462.495722.csv  submission_antoine2.csv  unet-marwan1.csv  unet-marwan1.pth  unet-marwan2.csv
submissions/temp/: README.md
