[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "road_segmentation"
readme = "README.md"
version = "0.0.1"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

[tool.hatch.build.targets.wheel]
packages = ["src/road_segmentation"]